# 7-5-21
 - Added different Emp mage mesh and texture
 - EMP infantry uses mp40 mesh instead of generic
 - Attempting to fix Mage CAS from dissapearing when added to an airbase

# 6-18-21
 - Models and Textures
    - Added Republican Mage rifle, Fusil Automatique Modèle 1917 and texturing
    - Added Republican Mage texturing
    - Updated Republican Mage model
 - Animations
    - Added Republic Mage moving animation
    - Added Republic Mage shooting animation
    - Updated Republic Mage idle animation
 - Started China focus tree

# 6-11-21
 - Removed EMP mage tubing to fix rubberbanding
 - Added EMP mage charging shoot animation
 - Added US shooting as placeholder, might not replace

# 6-10-21
 - Added Republic Mage idle animation
 - Added Empire Mage idle and movement animations
 - Added Mondragon M1908 Rifle for Empire mages
 - Started adding Supreme High Command advisor slots
 - Placeholder USA animations for EMP mages shooting

# 5-29-21
 - Added graphical cultures for Empire, Republic, and Legadonia
    - Fixed Republic model not showing up
 - Added Legadonia orb
    - Need a better picture
 - Republic Model and Idle animation
    - Need to fix multiple rifles being attached on Idle animation

# 5-26-21
 - Working on adding mage CAS and carrier CAS
 - Adding Republic mage model
    - Custom idle animation
 - Legadonia name tweaks 

# 5-23-21
 - Got custom models working
 - Added improved mage flight gear
 - Added placeholder default animations

# 5-15-21
 - More work on custom emp mage models
 
# 5-14-21
 - Started custom model for empire mages
 - Fixed localization for russy east expand
 - Changed pictures for russy east expand
 
# 5-11-21
 - Added mage flight equipment
 - expanded Russy east Expansion

# 5-10-21
 - Adjusted Idloa flag
 - More Russy eastern expansion
 
# 5-9-21
 - Russy focus tree
    - Expanding Eastern Russia's building limit
 - Names for USA and UK computation jewels, assuming the UK uses the US equipment, never really stated in the LN.