@@ -67,7 +67,7 @@ equipments = {
         is_buildable = no
         type = { cas fighter }
         group_by = archetype
-        sprite = light_plane
+        sprite = mage
         air_map_icon_frame = 2
 
         interface_category = interface_category_air
@@ -112,7 +112,7 @@ equipments = {
         is_buildable = no
         type = { cas fighter }
         group_by = archetype
-        sprite = light_plane
+        sprite = mage
         air_map_icon_frame = 2
 
         interface_category = interface_category_air
