@@ -1,0 +1,19 @@
+sub_units = {
+	mage_cas = {
+		sprite = mage 
+		priority = 3
+		active = yes
+		type = { cas }
+		need = { mage_cas_equipment_1 = 1 }
+		category = { category_cas }
+	}
+
+	mage_cv_cas = {
+		sprite = mage
+		priority = 3
+		active = yes
+		type = { cas }
+		need = { mage_cv_cas_equipment_1 = 1 }
+		category = { category_cas }
+	}
+}
