@@ -3796,6 +3796,13 @@ guiTypes = {
 				slotsize = { width = 70 height = 70 }
 				format = "UP"
 			}
+			gridboxtype = {
+				name = "tech_mage_weapons_tree"
+				position = { x = 0% y = 172 }
+				size = { width = 80% height = 80% }
+				slotsize = { width = 70 height = 70 }
+				format = "UP"
+			}
 		}# end YS
 		
 		containerWindowType = {
