@@ -14,14 +14,16 @@
  mage_equipment_1_desc:0 "With better understandings of mage, magic, and mana, mage equipment can be standardized and optimized."
  mage_equipment_2_desc:0 "The breakthrough in multi-core synchronization allows mages to cast multiple spells at the same time."
  mage_equipment_3_desc:0 "It is said that it would take a thousand years to overcome this pinnacle contraption of magic."
+
  EMP_mage_equipment_1:0 "Volcker Type 13"
  EMP_mage_equipment_2:0 "Elenium Type 97"
  EMP_mage_equipment_3:0 "Elenium Type 95"
  EMP_mage_equipment_1_short:0 "Type 13"
  EMP_mage_equipment_2_short:0 "Type 97"
  EMP_mage_equipment_3_short:0 "Type 95"
+
  RUS_mage_equipment_0_desc:0 "Even the earliest prototypes that harness a mage's mana are extremely deadly for regular troops.\n\n§RCannot research until mages have been released.§!"
- #Additions
+ # Additions
  USA_mage_equipment_0:0 "G58 Precision Pocket Watch"
  USA_mage_equipment_1:0 "4U General Purpose Pocket Watch"
  USA_mage_equipment_2:0 "6F Water-Resistant Precision Pocket Watch"
@@ -31,6 +33,7 @@
  USA_mage_equipment_0_desc:0 "An experimental model invented by US Skunk Association which prioritizes stabilities yet has poor peripheral compatibility and high cost. This prototype eventually failed to be adopted."
  USA_mage_equipment_1_desc:0 "A old model handled by US Skunk Association in April, 1926. Its performance was so-so rated by Commonwealth."
  USA_mage_equipment_2_desc:0 "A new model handled by US Skunk Association in April, 1926. It was very famous around Commonwealth marine mages that they wanted it if at all possible. It wouldn't rust in the salty ocean breezes and its movements were very reliable."
+
  ALK_mage_equipment_0:0 "G58 Precision Pocket Watch"
  ALK_mage_equipment_1:0 "4U General Purpose Pocket Watch"
  ALK_mage_equipment_2:0 "6F Water-Resistant Precision Pocket Watch"
@@ -40,6 +43,7 @@
  ALK_mage_equipment_0_desc:0 "An experimental model invented by US Skunk Association which prioritizes stabilities yet has poor peripheral compatibility and high cost. This prototype eventually failed to be adopted."
  ALK_mage_equipment_1_desc:0 "A old model handled by US Skunk Association in April, 1926. Its performance was so-so rated by Commonwealth."
  ALK_mage_equipment_2_desc:0 "A new model handled by US Skunk Association in April, 1926. It was very famous around Commonwealth marine mages that they wanted it if at all possible. It wouldn't rust in the salty ocean breezes and its movements were very reliable."
+
  LEG_mage_equipment:0 "Mage Equipment"
  LEG_mage_equipment_0:0 "Prototype Mage Equipment"
  LEG_mage_equipment_1:0 "Early Mage Equipment"
@@ -54,7 +58,12 @@
  LEG_mage_equipment_1_desc:0 "With better understandings of mage, magic, and mana, mage equipment can be standardized and optimized."
  LEG_mage_equipment_2_desc:0 "The breakthrough in multi-core synchronization allows mages to cast multiple spells at the same time."
  LEG_mage_equipment_3_desc:0 "It is said that it would take a thousand years to overcome this pinnacle contraption of magic."
-#Flight gear
+
+ RUS_mage_equipment_2:0 "T-3476"
+ RUS_mage_equipment_2_short:0 "T3476"
+ RUS_mage_equipment_2_desc:0 "A simple orb that allows for heavy firepower and shielding at the cost of mobility and casting speed."
+
+# Flight gear
  mage_flight_gear:0 "Mage Flight Gear"
  mage_flight_gear_0:0 "Mage Flight Gear"
  mage_flight_gear_0_desc:0 "Auxilary system to enhance mage's flight ability."
@@ -62,7 +71,7 @@
  mage_flight_gear_1:0 "Improved Mage Flight Gear"
  mage_flight_gear_1_desc:0 "Improved Auxilary system to enhance mage's flight ability."
  mage_flight_gear_1_short:0 "Improved Flight Gear"
-#Mage CAS
+# Mage CAS
  mage_cas_equipment:0 "Mage CAS Fighters"
  mage_cas_equipment_1:0 "Mage CAS Fighters"
  mage_cas_equipment_1_desc:0 "Mages focused on eliminating enemy ground units from high altitudes."
@@ -71,3 +80,49 @@
  mage_cv_cas_equipment_1:0 "Mage Carrier CAS Fighters"
  mage_cv_cas_equipment_1_desc:0 "Carrier based Mages attacking from high altitudes."
  mage_cv_cas_equipment_1_short:0 "Mage Carrier CAS"
+
+# Mage Weapons
+ mage_weapons:0 "Mage Weapons"
+ mage_weapons_desc:0 ""
+
+ EMP_mage_weapons_0:0 "Mondragón M1908"
+ EMP_mage_weapons_0_short:0 "Fusil M1908"
+ EMP_mage_weapons_1:0 "SIG MKMS"
+ EMP_mage_weapons_1_short:0 "MKMS"
+ EMP_mage_weapons_2:0 "Fallschirmjägergewehr 42"
+ EMP_mage_weapons_2_short:0 "FG 42"
+
+ REP_mage_weapons_0:0 "Fusil Automatique Modèle 1917"
+ REP_mage_weapons_0_short:0 "RSC M1917"
+
+ ALK_mage_weapons_0:0 "M1 Garand"
+ ALK_mage_weapons_0_short:0 "M1"
+ ALK_mage_weapons_1:0 "Sterling Submachinegun"
+ ALK_mage_weapons_1_short:0 "Sterling"
+
+ USA_mage_weapons_0:0 "M1 Garand"
+ USA_mage_weapons_0_short:0 "M1"
+
+ LEG_mage_weapons_0:0 "M1 Garand"
+ LEG_mage_weapons_0_short:0 "M1"
+
+# Infantry Weapons
+ EMP_infantry_equipment_0:0 "Mauser Gewer 1898M"
+ EMP_infantry_equipment_0_short:0 "Gewer 98"
+ EMP_infantry_equipment_1:0 "Karabiner 98k"
+ EMP_infantry_equipment_1_short:0 "Kar 98k"
+ EMP_infantry_equipment_2:0 "Bergmann MP 18"
+ EMP_infantry_equipment_2_short:0 "MP 18"
+ EMP_support_weapons:0 "Maxim MG08/15 & 7.58 cm Leichter Minenwerfer"
+ EMP_support_weapons2:0 "Maschinengewehr 13 & 8 cm Granatwerfer 36"
+ EMP_support_weapons3:0 "8 cm Granatwerfer 34"
+
+ REP_infantry_equipemnt_0:0 "Fusil Modèle 1886"
+ REP_infantry_equipment_0_short:0 "Lebel 1886"
+ REP_infantry_equipment_1:0 "Fusil à répétition MAS modèle 36"
+ REP_infantry_equipment_1_short:0 "MAS-36"
+ REP_infantry_equipment_2:0 "Pistolet Mitrailleur MAS modèle 38"
+ REP_infantry_equipment_2_short:0 "MAS-38"
+
+ ALK_infantry_equipment_0:0 "Short Magazine Lee–Enfield Mk I"
+ ALK_infantry_equipment_0_short:0 "SMLE"
