@@ -1,0 +1,7 @@
+﻿l_english:
+ mage_cas:0 "Mage CAS"
+ mage_cas_desc:0 "Arial Mages in a Close Air Support role"
+ mage_cas_1:0 "Mage CAS"
+ mage_cas_1_desc:0 "Arial Mages in a Close Air Support role"
+ mage_cas_2:0 "Improved Mage CAS"
+ mage_cas_2_desc:0 "Arial Mages in a Close Air Support role"
